# tierpsy_tracker_2.0

./: .gitignore  README.md  pyproject.toml  requirements_hpc.txt  requirements_local.txt  setup.py
deeptangle/: checkpoints.py  forward.py  logger.py  metrics.py  model.py  predict.py  spline.py  tracking.py
deeptangle/dataset/: pca.py
qfiles/: detect_skeletons.q  feature_calculations.q
tierpsy/: __init__.py
tierpsy/analysis/ske_orient/: checkHeadOrientation.py
tierpsy/analysis/split_fov/: FOVMultiWellsSplitter.py
tierpsy/features/open_worm_analysis_toolbox/prefeatures/: basic_worm.py
tierpsy/features/tierpsy_features/: helper.py
tierpsy/helper/misc/: misc.py
tierpsy/processing/: helper.py
tierpsynn/: __init__.py
tierpsynn/analysis/: detect_track_process.py  features_spline.py
tierpsynn/debugging/: Single_clip.py
tierpsynn/extras/: Para_config.py  Wormstats.py
tierpsynn/extras/configs/: loopbio_rig_24WP_splitFOV_NN_20220202.json  loopbio_rig_96WP_splitFOV_NN_20220202.json
tierpsynn/extras/cython_files/: setup.py  spline_cython.c  spline_cython.pyx
tierpsynn/extras/json_params_example/: Test_params.json
tierpsynn/helper/: pre_processing.py
tierpsynn/helper/Readers/: readLoopBio.py  readVideoHDF5.py  readVideomp4.py
tierpsynn/processing/: main_process_local.py  processMultipleFilesFun.py
tierpsynn/train/: train.py
tierpsynn/train/4Hydra_only/: Stack_new_data_with_old.py  eval_training.py
